--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -14,7 +14,7 @@
                {{ errorMessage() }}
             </div>
          }
-      <div class="mb-4">
+      <!-- <div class="mb-4">
          <label class="form-label text-muted d-block mb-2">Who are you?</label>
          <div class="d-flex align-items-center gap-4 role-options">
             <div class="form-check">
@@ -48,7 +48,7 @@
                <label class="form-check-label text-muted" for="roleUser">User</label>
             </div>
          </div>
-      </div>
+      </div> -->
       <div class="mb-3">
          <label for="email" class="form-label text-muted">Email</label>
          <input
@@ -59,7 +59,7 @@
             formControlName="email"
             />
       </div>
-      <div class="mb-3">
+      <!-- <div class="mb-3">
          <label for="username" class="form-label text-muted">Username</label>
          <input
             id="username"
@@ -68,7 +68,7 @@
             placeholder="Username"
             formControlName="username"
             />
-      </div>
+      </div> -->
       <div class="mb-2 position-relative password-section">
          <label for="password" class="form-label text-muted">Password</label>
          <input
@@ -87,7 +87,7 @@
          {{ passwordVisible() ? 'Hide' : 'Show' }}
          </button>
       </div>
-      <div class="password-rules-container mb-3">
+      <!-- <div class="password-rules-container mb-3">
          <div class="d-flex flex-wrap gap-3">
             <span class="rule-item">Use 8 or more characters</span>
             <span class="rule-item">One uppercase character</span>
@@ -97,12 +97,12 @@
             <span class="rule-item">One special character</span>
             <span class="rule-item">One numeric character</span>
          </div>
-      </div>
-      <p class="small text-center text-muted mb-4">
+      </div> -->
+      <!-- <p class="small text-center text-muted mb-4">
          By creating an account, you agree to the
          <a href="#" class="text-decoration-underline text-muted">Terms of use</a> and
          <a href="#" class="text-decoration-underline text-muted">Privacy policy</a>
-      </p>
+      </p> -->
       <div class="text-center">
          <button
             type="submit"
@@ -116,7 +116,7 @@
          </button>
       </div>
       </form>
-      <div class="text-center mt-2">
+      <!-- <div class="text-center mt-2">
          <div class="mt-3">Or Log in with</div>
          <div class="d-flex justify-content-center align-items-center gap-2 mt-2">
             <button 
@@ -129,6 +129,6 @@
                <span>Microsoft 365</span>
             </button>
          </div>
-      </div>
+      </div> -->
    </div>
 </div>
